# cord

./: .ghcid  README.md  cord.cabal
.github/workflows/: action.yml
app/: Main.hs  SourceMeta.hs
