cabal-version:      3.0
name:               cord
version:            0.1.0.0
license:            MIT
license-file:       README.md
author:             coriocactus
build-type:         Simple

executable cord
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:    base ^>=4.20.0.0
                    , time
                    , wai
                    , wai-extra
                    , warp
                    , http-types
                    , bytestring
                    , blaze-html
                    , blaze-markup
                    , text
                    , aeson
                    , http-conduit
                    , SHA
  hs-source-dirs:   app
  default-language: Haskell2010
