cabal-version:      3.0
name:               cord
version:            0.1.0.0
build-type:         Simple

executable cord
  ghc-options:      -Wall
  default-language: GHC2024
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base ^>=4.21.0.0,
    SHA,
    aeson,
    blaze-html,
    blaze-markup,
    bytestring,
    http-conduit,
    http-types,
    text,
    time,
    wai,
    wai-extra,
    warp,
